load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "root",
    srcs = [
        "apply.go",
        "checkout.go",
        "destroy.go",
        "downgrade.go",
        "e2e.go",
        "init.go",
        "kustomize.go",
        "load_manifest.go",
        "modules_version.go",
        "plan.go",
        "pull.go",
        "pulumi.go",
        "refresh.go",
        "terraform.go",
        "tofu.go",
        "upgrade.go",
        "validate_manifest.go",
        "validate_outputs.go",
        "version.go",
    ],
    importpath = "github.com/plantonhq/openmcf/cmd/openmcf/root",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/org/openmcf/shared",
        "//apis/org/openmcf/shared/iac/pulumi",
        "//apis/org/openmcf/shared/iac/terraform",
        "//cmd/openmcf/root/e2e",
        "//cmd/openmcf/root/kustomize",
        "//cmd/openmcf/root/pulumi",
        "//cmd/openmcf/root/terraform",
        "//cmd/openmcf/root/tofu",
        "//internal/cli/cliprint",
        "//internal/cli/flag",
        "//internal/cli/iacflags",
        "//internal/cli/iacrunner",
        "//internal/cli/manifest",
        "//internal/cli/prompt",
        "//internal/cli/staging",
        "//internal/cli/ui/validateoutputs",
        "//internal/cli/upgrade",
        "//internal/cli/version",
        "//internal/cli/workspace",
        "//internal/manifest",
        "//pkg/crkreflect",
        "//pkg/iac/localmodule",
        "//pkg/iac/provisioner",
        "//pkg/iac/pulumi/pulumistack",
        "//pkg/iac/stackinput",
        "//pkg/iac/stackinput/stackinputproviderconfig",
        "//pkg/iac/tofu/tfbackend",
        "//pkg/iac/tofu/tofumodule",
        "//pkg/kubernetes/kubecontext",
        "//pkg/outputs",
        "@com_github_fatih_color//:color",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_spf13_cobra//:cobra",
        "@org_golang_google_protobuf//proto",
    ],
)
