load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "runner",
    srcs = [
        "dependencies.go",
        "outputs_verifier.go",
        "pulumi.go",
        "refresolve.go",
        "runner.go",
        "stackinput.go",
        "terraform.go",
        "terraform_input.go",
    ],
    importpath = "github.com/plantonhq/openmcf/e2e/framework/runner",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/org/openmcf/shared/cloudresourcekind",
        "//apis/org/openmcf/shared/foreignkey/v1:foreignkey",
        "//apis/org/openmcf/shared/iac/terraform",
        "//e2e/framework/provider",
        "//internal/manifest",
        "//pkg/crkreflect",
        "//pkg/iac/stackinput",
        "//pkg/iac/stackinput/providerenvvars",
        "//pkg/iac/tofu/generators",
        "//pkg/iac/tofu/tfbackend",
        "//pkg/outputs",
        "@com_github_gruntwork_io_terratest//modules/terraform",
        "@com_github_pkg_errors//:errors",
        "@io_k8s_sigs_yaml//:yaml",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
    ],
)

go_test(
    name = "runner_test",
    srcs = [
        "dependencies_test.go",
        "outputs_verifier_test.go",
        "refresolve_test.go",
    ],
    embed = [":runner"],
    deps = [
        "//apis/org/openmcf/provider/auth0/auth0resourceserver/v1:auth0resourceserver",
        "//apis/org/openmcf/provider/aws/awssubnet/v1:awssubnet",
        "//apis/org/openmcf/shared/cloudresourcekind",
        "//internal/manifest",
    ],
)
