load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "iacrunner",
    srcs = [
        "backend_config.go",
        "context.go",
        "resolve_context.go",
        "run_pulumi.go",
        "run_terraform.go",
        "run_tofu.go",
    ],
    importpath = "github.com/plantonhq/planton/internal/cli/iacrunner",
    visibility = ["//:__subpackages__"],
    deps = [
        "//apis/dev/planton/shared",
        "//apis/dev/planton/shared/iac/pulumi",
        "//apis/dev/planton/shared/iac/terraform",
        "//internal/cli/cliprint",
        "//internal/cli/flag",
        "//internal/cli/manifest",
        "//internal/cli/prompt",
        "//internal/cli/ui",
        "//internal/manifest",
        "//pkg/iac/localmodule",
        "//pkg/iac/provisioner",
        "//pkg/iac/pulumi/pulumistack",
        "//pkg/iac/stackinput/providerdetect",
        "//pkg/iac/stackinput/stackinputproviderconfig",
        "//pkg/iac/tofu/backendconfig",
        "//pkg/iac/tofu/tofumodule",
        "//pkg/kubernetes/kubecontext",
        "@com_github_pkg_errors//:errors",
        "@com_github_spf13_cobra//:cobra",
        "@org_golang_google_protobuf//proto",
    ],
)
