load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "prompt",
    srcs = [
        "backend.go",
        "provisioner.go",
    ],
    importpath = "github.com/plantonhq/planton/internal/cli/prompt",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/cli/ui",
        "//pkg/iac/provisioner",
        "//pkg/iac/tofu/backendconfig",
    ],
)
