load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "upgrade",
    srcs = [
        "direct.go",
        "platform.go",
        "upgrade.go",
        "version.go",
    ],
    importpath = "github.com/plantonhq/planton/internal/cli/upgrade",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/cli/cliprint",
        "//internal/cli/version",
        "@com_github_fatih_color//:color",
    ],
)

go_test(
    name = "upgrade_test",
    srcs = ["version_test.go"],
    embed = [":upgrade"],
)
