load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "profile",
    srcs = [
        "discover.go",
        "doc.go",
        "loader.go",
        "paths.go",
    ],
    importpath = "github.com/plantonhq/openmcf/pkg/e2e/profile",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/org/openmcf/qa/componente2eprofile/v1:componente2eprofile",
        "//apis/org/openmcf/qa/providere2eprofile/v1:providere2eprofile",
        "//apis/org/openmcf/shared",
        "@com_github_pkg_errors//:errors",
        "@io_k8s_sigs_yaml//:yaml",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
    ],
)
