load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = [
        "cloud_resource_service.go",
        "credential_resolver.go",
        "credential_service.go",
        "stack_update_service.go",
    ],
    importpath = "github.com/plantonhq/openmcf/app/backend/internal/service",
    visibility = ["//app/backend:__subpackages__"],
    deps = [
        "//apis/org/openmcf/app/cloudresource/v1:cloudresource",
        "//apis/org/openmcf/app/credential/v1:credential",
        "//apis/org/openmcf/app/stackupdate/v1:stackupdate",
        "//apis/org/openmcf/provider/auth0",
        "//apis/org/openmcf/provider/aws",
        "//apis/org/openmcf/provider/azure",
        "//apis/org/openmcf/provider/gcp",
        "//apis/org/openmcf/provider/openstack",
        "//apis/org/openmcf/shared/cloudresourcekind",
        "//app/backend/internal/database",
        "//app/backend/pkg/models",
        "//internal/manifest",
        "//pkg/crkreflect",
        "//pkg/iac/pulumi/backendconfig",
        "//pkg/iac/pulumi/pulumimodule",
        "//pkg/iac/pulumi/pulumistack",
        "//pkg/iac/stackinput",
        "//pkg/iac/stackinput/stackinputproviderconfig",
        "@com_connectrpc_connect//:connect",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_mongodb_go_mongo_driver//bson:go_default_library",
        "@org_mongodb_go_mongo_driver//bson/primitive:go_default_library",
    ],
)
