load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "tofu",
    srcs = [
        "apply.go",
        "destroy.go",
        "generate_variables.go",
        "init.go",
        "load_tfvars.go",
        "plan.go",
        "refresh.go",
    ],
    importpath = "github.com/plantonhq/openmcf/cmd/openmcf/root/tofu",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/org/openmcf/shared",
        "//apis/org/openmcf/shared/iac/terraform",
        "//internal/cli/cliprint",
        "//internal/cli/flag",
        "//internal/cli/manifest",
        "//internal/cli/ui",
        "//internal/cli/workspace",
        "//internal/manifest",
        "//pkg/crkreflect",
        "//pkg/iac/localmodule",
        "//pkg/iac/stackinput",
        "//pkg/iac/stackinput/stackinputproviderconfig",
        "//pkg/iac/tofu/generators",
        "//pkg/iac/tofu/tfbackend",
        "//pkg/iac/tofu/tofumodule",
        "//pkg/kubernetes/kubecontext",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_spf13_cobra//:cobra",
    ],
)
