load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "e2e",
    srcs = ["discover.go"],
    importpath = "github.com/plantonhq/planton/cmd/planton/root/e2e",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/dev/planton/qa/componente2eprofile/v1:componente2eprofile",
        "//apis/dev/planton/shared",
        "//internal/cli/ui/e2ediscover",
        "//pkg/e2e/profile",
        "@com_github_spf13_cobra//:cobra",
        "@org_golang_x_term//:term",
    ],
)
