load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "kubernetes",
    srcs = [
        "harness.go",
        "verify.go",
    ],
    importpath = "github.com/plantonhq/openmcf/e2e/framework/provider/kubernetes",
    visibility = ["//visibility:public"],
    deps = ["@com_github_pkg_errors//:errors"],
)
